# v16

./: .gitignore  ARCHITECTURE.md  README.md  discovery-suite.yaml  ledger.chain.jsonl  pyproject.toml  regress_add.py  run_bvps_abs_only.sh
baselines/: sealed-smoke-skills.baseline.json  sealed-smoke-skills.commitment.txt  sealed-smoke.baseline.json  sealed-smoke.commitment.txt
pytest-of-root/: pytest-current
scripts/: check_kernel_selection.py  check_sealed_smoke.sh  devcheck.sh  devgate.sh  devgate_fast.sh  gate.sh  gate_sealed.py  inspect_episode.py  inspect_verify_overhead.py  perf_history_append.py  report_diff.py  report_doctor.py  report_fields.py  report_migrate.py  report_outliers.py  report_rollup.py  report_variance.py  suite_report_compare.py  suite_report_summary.py  suite_report_worst.py
skills/: registry.json
tests/: test_ansi_path_sanitization.py  test_arith_deterministic.py  test_arith_edge_cases.py  test_arith_stub_episode.py  test_arith_types.py  test_artifact_manifest_batch.py  test_artifact_plan_sink_off.py  test_artifact_plan_sink_off_skips_build.py  test_artifact_plan_sink_tmpfs.py  test_bvps_cache.py  test_bvps_cache_hits_abs_only.py  test_bvps_cache_touch_once.py  test_bvps_cegis_counterexample.py  test_bvps_consequence_lane_finds_overfit.py  test_bvps_interpreter_deterministic.py  test_bvps_persist_cache.py  test_bvps_persist_preload.py  test_bvps_persist_roundtrip_dir.py  test_bvps_persist_timing_stats_smoke.py  test_bvps_synth_toy_families.py  test_bvps_translation_lane_catches_mismatch.py  test_canary_trips_on_leak.py  test_canonical.py  (+80 more)
(+189 files in other folders)
