[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eidolon_v16"
version = "0.1.0"
description = "EIDOLON v16 verified discovery machine"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "pydantic>=2.6",
  "typer>=0.9",
  "rich>=13.7",
  "numpy<2",
  "faiss-gpu",
  "llama-cpp-python>=0.3.16",
  "huggingface-hub>=1.3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3",
  "mypy>=1.8",
]

[project.scripts]
eidolon = "eidolon_v16.cli:app"
huggingface-cli = "huggingface_hub.cli.hf:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E203", "E266"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
mypy_path = ["src"]
